Signature Project MongoDB_PythonFlaskWebFramework_RESTAPI_GKE/studentserver-deployment.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: studentserver-config
data:
  MONGO_URL: 34.71.187.5
  MONGO_DATABASE: studentdb

adagniew407@cloudshell:~$ ^C
adagniew407@cloudshell:~$ ^C
adagniew407@cloudshell:~$ cat studentserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: studentserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: asdg124/mydbd
        imagePullPolicy: Always
        name: web
        ports:
        - containerPort: 8080
